RESOLVED FIXED186408
REGRESSION (r232544): Pages are blank after homing out and then resuming on iPad
https://bugs.webkit.org/show_bug.cgi?id=186408
Summary REGRESSION (r232544): Pages are blank after homing out and then resuming on iPad
Tim Horton
Reported 2018-06-07 13:50:39 PDT
REGRESSION (r232544): Pages are blank after homing out and then resuming on iPad
Attachments
Patch (1.97 KB, patch)
2018-06-07 13:50 PDT, Tim Horton
no flags
Tim Horton
Comment 1 2018-06-07 13:50:46 PDT
Tim Horton
Comment 2 2018-06-07 13:51:04 PDT
I'm going to write a test right away, just need to land this first to unblock other folks.
WebKit Commit Bot
Comment 3 2018-06-07 15:03:21 PDT
Comment on attachment 342203 [details] Patch Clearing flags on attachment: 342203 Committed r232601: <https://trac.webkit.org/changeset/232601>
WebKit Commit Bot
Comment 4 2018-06-07 15:03:22 PDT
All reviewed patches have been landed. Closing bug.
Radar WebKit Bug Importer
Comment 5 2018-06-07 15:04:18 PDT
Note You need to log in before you can comment on or make changes to this bug.