Cherry-pick r232601. rdar://problem/40907111

REGRESSION (r232544): Pages are blank after homing out and then resuming on iPad
    https://bugs.webkit.org/show_bug.cgi?id=186408
    <rdar://problem/40907111>

    Reviewed by Wenson Hsieh.

    * UIProcess/API/Cocoa/WKWebView.mm:
    (-[WKWebView _resizeWhileHidingContentWithUpdates:]):
    Clients who use _resizeWhileHidingContentWithUpdates don't call
    _endAnimatedResize; the former API is a one-shot. We can't wait for
    _endAnimatedResize to complete the animation (and don't need to, since
    the content is hidden), but instead should just finish it when the
    commit with the resized tiles arrives.

    Canonical link: https://commits.webkit.org/201772@main
    git-svn-id: https://svn.webkit.org/repository/webkit/trunk@232601 268f45cc-cd09-0410-ab3c-d52691b4dbfc

Canonical link: https://commits.webkit.org/201724.13@safari-606.1.20-branch
git-svn-id: https://svn.webkit.org/repository/webkit/branches/safari-606.1.20-branch@232625 268f45cc-cd09-0410-ab3c-d52691b4dbfc